Fix: Nested Unordered List Spacing in Assignment Panel
Because:
* There was too much spacing between the upper-level content and the nested list.

This commit:
* Removes the margin-bottom from the upper list paragraph content.

--- a/app/assets/stylesheets/components/lesson/lesson_content.scss
+++ b/app/assets/stylesheets/components/lesson/lesson_content.scss
@@ -97,6 +97,7 @@
 
     li,
     p {
+      margin-bottom: 0;
       color: $text-primary;
     }
 
